# qobine

./: Cargo.toml  README.md  cargo-sources.json  flake.nix
.github/workflows/: pull-request.yml  release.yml
.sqlx/: query-56d80da3a6c1776ac9673d36885cd01a0b40c935c91691e5aef1a7cd6fee234e.json
flatpak/: io.github.sofusa.qobine.metainfo.xml
qobuz-player-cli/src/: lib.rs
qobuz-player-client/: Cargo.toml
qobuz-player-client/src/: client.rs  lib.rs  qobuz_models.rs  stream.rs
qobuz-player-client/src/qobuz_models/: track.rs
qobuz-player-client/src/stream/: flac_source_stream.rs  passthrough_storage.rs
qobuz-player-client/tests/: integration_test.rs
qobuz-player-connect/: Cargo.toml
qobuz-player-connect/src/: lib.rs  main.rs
qobuz-player-controls/.sqlx/: query-88514b5aeefe31fd1c817e71b6513cc4658db38eb5fb3ad62805887714e16bd9.json
qobuz-player-controls/src/: client.rs  controls.rs  database.rs  downloader.rs  models.rs  player.rs  tracklist.rs
qobuz-player-controls/src/models/: mapper.rs
qobuz-player-gtk/: Cargo.toml  README.md
qobuz-player-gtk/src/: callbacks.rs  lib.rs  main.rs  ui.rs
qobuz-player-gtk/src/ui/: album_detail_page.rs  albums_page.rs  app_shell.rs  artist_detail_page.rs  artists_page.rs  detail_page.rs  favorite_tracks_page.rs  grid_page.rs  now_playing_bar.rs  playlist_detail_page.rs  playlists_page.rs  preferences.rs  queue.rs
qobuz-player-headless/: Cargo.toml
qobuz-player-headless/src/: main.rs
qobuz-player-mqtt/: Cargo.toml
qobuz-player-mqtt/src/: lib.rs
qobuz-player-rfid/: Cargo.toml
qobuz-player-rfid/src/: main.rs
qobuz-player-tui/: README.md
qobuz-player-tui/src/: app.rs  discover.rs  favorites.rs  genres.rs  lib.rs  main.rs  popup.rs  queue.rs  search.rs  ui.rs
qobuz-player-tui/src/widgets/: album_list.rs  artist_list.rs  playlist_list.rs  track_list.rs
qobuz-player-web/: Cargo.toml
qobuz-player-web/src/: main.rs
qobuz-player-web/src/routes/: playlist.rs
