[package]
name = "qobuz-player-rfid"
version.workspace = true
edition.workspace = true
license-file.workspace = true
repository.workspace = true

[dependencies]
qobuz-player-controls = { version = "*", path = "../qobuz-player-controls" }
tokio.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true