[package]
name = "qobuz-player-rfid"
version.workspace = true
edition.workspace = true
license-file.workspace = true
repository.workspace = true

[[bin]]
name = "qobuz-player-rfid"
path = "src/main.rs"

[features]
gpio = ["dep:qobuz-player-gpio"]
mqtt = ["dep:qobuz-player-mqtt"]

[dependencies]
qobuz-player-cli = { version = "*", path = "../qobuz-player-cli" }
qobuz-player-connect = { version = "*", path = "../qobuz-player-connect" }
qobuz-player-controls = { version = "*", path = "../qobuz-player-controls" }
qobuz-player-gpio = { version = "*", path = "../qobuz-player-gpio", optional = true, features = ["gpio"] }
qobuz-player-mqtt = { version = "*", path = "../qobuz-player-mqtt", optional = true, features = ["cli"] }

tokio.workspace = true
tracing.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true

# binary dependencies
clap.workspace = true
