[package]
name = "qobuz-player-web"
version.workspace = true
edition.workspace = true
license-file.workspace = true
repository.workspace = true

[dependencies]
qobuz-player-controls = { version = "*", path = "../qobuz-player-controls" }
qobuz-player-rfid = { version = "*", path = "../qobuz-player-rfid" }

axum.workspace = true
axum-extra.workspace = true
futures.workspace = true
mime.workspace = true
mime_guess.workspace = true
rust-embed.workspace = true
serde.workspace = true
serde_json.workspace = true
time.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
tracing.workspace = true
skabelon.workspace = true

[target.'cfg(target_os = "linux")'.dependencies]
filesentry = "0.2.1"
