[package]
name = "qobuz-player-web"
version.workspace = true
edition.workspace = true
license-file.workspace = true
repository.workspace = true

[[bin]]
name = "qobuz-player-web"
path = "src/main.rs"

[features]
gpio = ["dep:qobuz-player-gpio"]
mqtt = ["dep:qobuz-player-mqtt"]

[dependencies]
qobuz-player-cli = { version = "*", path = "../qobuz-player-cli" }
qobuz-player-connect = { version = "*", path = "../qobuz-player-connect" }
qobuz-player-controls = { version = "*", path = "../qobuz-player-controls" }
qobuz-player-rfid = { version = "*", path = "../qobuz-player-rfid" }
qobuz-player-gpio = { version = "*", path = "../qobuz-player-gpio", optional = true, features = ["gpio"] }
qobuz-player-mqtt = { version = "*", path = "../qobuz-player-mqtt", optional = true, features = ["cli"] }

axum.workspace = true
axum-extra.workspace = true
time.workspace = true
futures.workspace = true
serde_json.workspace = true
mime.workspace = true
mime_guess.workspace = true
tokio.workspace = true
rust-embed.workspace = true
serde.workspace = true
tokio-stream.workspace = true
tracing.workspace = true
skabelon.workspace = true

# binary dependencies
clap.workspace = true
tracing-subscriber.workspace = true

[target.'cfg(target_os = "linux")'.dependencies]
filesentry = "0.2.1"
